<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.test.uihijack.MainActivity" >

    <!-- 劫持说明 -->
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="34dp"
        android:text="@string/info" />
<!-- 取消按钮 -->
    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignRight="@+id/textView2"
        android:layout_marginRight="45dp"
        android:text="@string/Button1" />
<!-- 登录按钮 -->
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView1"
        android:layout_alignLeft="@+id/textView2"
        android:layout_marginBottom="150dp"
        android:layout_marginLeft="40dp"
        android:text="@string/Button" />
<!-- 欺骗信息 -->
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/warn" />
<!-- 顶部信息 -->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/hello_world"
        android:textSize="40sp" />
<!-- 帐号输入框 -->
        <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:hint="@string/username"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="148dp"
        android:layout_marginLeft="-25dp"
        android:ems="10" >

        <requestFocus />
    </EditText>
    <!-- 密码输入框 -->
     <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:hint="@string/password"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="210dp"
        android:layout_marginLeft="-25dp"
        android:ems="10"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>
</RelativeLayout>